--- a/examples/overloaded-holder-as-arg/CMakeLists.txt
+++ b/examples/overloaded-holder-as-arg/CMakeLists.txt
@@ -16,7 +16,7 @@ include_directories(
 )
 
 set(SOURCES
-    ../../include/overloaded_function.hpp
+    ../../include/overloaded.hpp
     main.cpp
 )
 
